--- a/salesforce-create-account/pom.xml
+++ b/salesforce-create-account/pom.xml
@@ -42,9 +42,9 @@
 			<cloudHubDeployment>
 				<uri>https://anypoint.mulesoft.com</uri>
 				<muleVersion>${mule.version}</muleVersion>
-				<username>username</username>
-				<password>password</password>
-				<environment>environment</environment>
+				<username>yoni3</username>
+				<password>Mayo7882*#*</password>
+				<environment>Sandbox</environment>
 				<applicationName>${appname}</applicationName>
 				<businessGroup>${business}</businessGroup>
 				<workerType>${vCore}</workerType>
