--- a/salesforce-create-account/pom.xml
+++ b/salesforce-create-account/pom.xml
@@ -25,7 +25,28 @@
          <anypoint.org.id>202f8892-74e5-4ca8-8aba-c03b6b336322</anypoint.org.id>
 		<app.runtime>4.3.0</app.runtime>
 		<mule.maven.plugin.version>3.5.1</mule.maven.plugin.version>
-		
+		    <mule-vm-connector.version>2.0.0</mule-vm-connector.version>
+        <mule-objectstore-connector.version>1.1.5</mule-objectstore-connector.version>
+        <mule-db-connector.version>1.8.2</mule-db-connector.version>
+        <mule-http-connector.version>1.5.23</mule-http-connector.version>
+        <mule-sockets-connector.version>1.2.0</mule-sockets-connector.version>
+        <mule-wsc-connector.version>1.6.1</mule-wsc-connector.version>
+        <mule-cloudhub-connector.version>1.0.1</mule-cloudhub-connector.version>
+        <mule-file-connector.version>1.3.2</mule-file-connector.version>
+        <mule-salesforce-connector.version>10.3.1</mule-salesforce-connector.version>
+        <mule-ftp-connector.version>1.5.2</mule-ftp-connector.version>
+        <mule-sftp-connector.version>1.3.8</mule-sftp-connector.version>
+
+        <!-- Mule Modules. -->
+        <mule-java-module.version>1.2.6</mule-java-module.version>
+        <mule-spring-module.version>1.3.3</mule-spring-module.version>
+        <mule-secure-configuration-property-module.version>1.2.3</mule-secure-configuration-property-module.version>
+        <mule-apikit-module.version>1.3.14</mule-apikit-module.version>
+        <mule-validation-module.version>1.4.0</mule-validation-module.version>
+        <mule-xml-module.version>1.1.0</mule-xml-module.version>
+        <mule-soapkit-module.version>1.2.7</mule-soapkit-module.version>
+        <mule-scripting-module.version>2.0.0</mule-scripting-module.version>
+        <mule-compression-module.version>2.1.1</mule-compression-module.version>
 		<key>secure.key</key>
 		
 	</properties>
